// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NationActionButton component tests NationActionButton press disabled 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <NationActionButton
    disable={true}
    iconSource={undefined}
    onPress={[MockFunction]}
    title=""
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <TouchableOpacity
        activeOpacity={1}
        disabled={true}
        onPress={[MockFunction]}
        style={
          Array [
            Object {
              "alignItems": "center",
              "justifyContent": "center",
            },
          ]
        }
      >
        <Image
          source={undefined}
        />
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "backgroundColor": "transparent",
              "color": "white",
              "fontSize": 10,
              "marginTop": 4,
            }
          }
        >
          
        </Text>
      </TouchableOpacity>,
      "opacity": 0.4,
      "style": Object {
        "backgroundColor": "transparent",
        "borderRadius": 15,
        "height": 48,
        "justifyContent": "center",
        "width": 48,
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "activeOpacity": 1,
        "children": Array [
          <Image
            source={undefined}
          />,
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "backgroundColor": "transparent",
                "color": "white",
                "fontSize": 10,
                "marginTop": 4,
              }
            }
          >
            
          </Text>,
        ],
        "disabled": true,
        "onPress": [MockFunction],
        "style": Array [
          Object {
            "alignItems": "center",
            "justifyContent": "center",
          },
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "source": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "accessible": true,
            "allowFontScaling": true,
            "children": "",
            "ellipsizeMode": "tail",
            "style": Object {
              "backgroundColor": "transparent",
              "color": "white",
              "fontSize": 10,
              "marginTop": 4,
            },
          },
          "ref": null,
          "rendered": "",
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <TouchableOpacity
          activeOpacity={1}
          disabled={true}
          onPress={[MockFunction]}
          style={
            Array [
              Object {
                "alignItems": "center",
                "justifyContent": "center",
              },
            ]
          }
        >
          <Image
            source={undefined}
          />
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "backgroundColor": "transparent",
                "color": "white",
                "fontSize": 10,
                "marginTop": 4,
              }
            }
          >
            
          </Text>
        </TouchableOpacity>,
        "opacity": 0.4,
        "style": Object {
          "backgroundColor": "transparent",
          "borderRadius": 15,
          "height": 48,
          "justifyContent": "center",
          "width": 48,
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "activeOpacity": 1,
          "children": Array [
            <Image
              source={undefined}
            />,
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "backgroundColor": "transparent",
                  "color": "white",
                  "fontSize": 10,
                  "marginTop": 4,
                }
              }
            >
              
            </Text>,
          ],
          "disabled": true,
          "onPress": [MockFunction],
          "style": Array [
            Object {
              "alignItems": "center",
              "justifyContent": "center",
            },
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "source": undefined,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "accessible": true,
              "allowFontScaling": true,
              "children": "",
              "ellipsizeMode": "tail",
              "style": Object {
                "backgroundColor": "transparent",
                "color": "white",
                "fontSize": 10,
                "marginTop": 4,
              },
            },
            "ref": null,
            "rendered": "",
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`NationActionButton component tests NationActionButton press enabled 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <NationActionButton
    disable={false}
    iconSource={1}
    onPress={[MockFunction]}
    title="TEST"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <TouchableOpacity
        activeOpacity={0.4}
        disabled={false}
        onPress={[MockFunction]}
        style={
          Array [
            Object {
              "alignItems": "center",
              "justifyContent": "center",
            },
          ]
        }
      >
        <Image
          source={1}
        />
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "backgroundColor": "transparent",
              "color": "white",
              "fontSize": 10,
              "marginTop": 4,
            }
          }
        >
          TEST
        </Text>
      </TouchableOpacity>,
      "opacity": 1,
      "style": Object {
        "backgroundColor": "transparent",
        "borderRadius": 15,
        "height": 48,
        "justifyContent": "center",
        "width": 48,
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "activeOpacity": 0.4,
        "children": Array [
          <Image
            source={1}
          />,
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "backgroundColor": "transparent",
                "color": "white",
                "fontSize": 10,
                "marginTop": 4,
              }
            }
          >
            TEST
          </Text>,
        ],
        "disabled": false,
        "onPress": [MockFunction],
        "style": Array [
          Object {
            "alignItems": "center",
            "justifyContent": "center",
          },
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "source": 1,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "accessible": true,
            "allowFontScaling": true,
            "children": "TEST",
            "ellipsizeMode": "tail",
            "style": Object {
              "backgroundColor": "transparent",
              "color": "white",
              "fontSize": 10,
              "marginTop": 4,
            },
          },
          "ref": null,
          "rendered": "TEST",
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <TouchableOpacity
          activeOpacity={0.4}
          disabled={false}
          onPress={[MockFunction]}
          style={
            Array [
              Object {
                "alignItems": "center",
                "justifyContent": "center",
              },
            ]
          }
        >
          <Image
            source={1}
          />
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "backgroundColor": "transparent",
                "color": "white",
                "fontSize": 10,
                "marginTop": 4,
              }
            }
          >
            TEST
          </Text>
        </TouchableOpacity>,
        "opacity": 1,
        "style": Object {
          "backgroundColor": "transparent",
          "borderRadius": 15,
          "height": 48,
          "justifyContent": "center",
          "width": 48,
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "activeOpacity": 0.4,
          "children": Array [
            <Image
              source={1}
            />,
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "backgroundColor": "transparent",
                  "color": "white",
                  "fontSize": 10,
                  "marginTop": 4,
                }
              }
            >
              TEST
            </Text>,
          ],
          "disabled": false,
          "onPress": [MockFunction],
          "style": Array [
            Object {
              "alignItems": "center",
              "justifyContent": "center",
            },
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "source": 1,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "accessible": true,
              "allowFontScaling": true,
              "children": "TEST",
              "ellipsizeMode": "tail",
              "style": Object {
                "backgroundColor": "transparent",
                "color": "white",
                "fontSize": 10,
                "marginTop": 4,
              },
            },
            "ref": null,
            "rendered": "TEST",
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`NationActionButton component tests NationActionButton press works 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <NationActionButton
    disable={true}
    enabled={true}
    iconSource={1}
    onPress={[MockFunction]}
    title=""
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <TouchableOpacity
        activeOpacity={1}
        disabled={true}
        onPress={[MockFunction]}
        style={
          Array [
            Object {
              "alignItems": "center",
              "justifyContent": "center",
            },
          ]
        }
      >
        <Image
          source={1}
        />
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "backgroundColor": "transparent",
              "color": "white",
              "fontSize": 10,
              "marginTop": 4,
            }
          }
        >
          
        </Text>
      </TouchableOpacity>,
      "opacity": 0.4,
      "style": Object {
        "backgroundColor": "transparent",
        "borderRadius": 15,
        "height": 48,
        "justifyContent": "center",
        "width": 48,
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "activeOpacity": 1,
        "children": Array [
          <Image
            source={1}
          />,
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "backgroundColor": "transparent",
                "color": "white",
                "fontSize": 10,
                "marginTop": 4,
              }
            }
          >
            
          </Text>,
        ],
        "disabled": true,
        "onPress": [MockFunction],
        "style": Array [
          Object {
            "alignItems": "center",
            "justifyContent": "center",
          },
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "source": 1,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "accessible": true,
            "allowFontScaling": true,
            "children": "",
            "ellipsizeMode": "tail",
            "style": Object {
              "backgroundColor": "transparent",
              "color": "white",
              "fontSize": 10,
              "marginTop": 4,
            },
          },
          "ref": null,
          "rendered": "",
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <TouchableOpacity
          activeOpacity={1}
          disabled={true}
          onPress={[MockFunction]}
          style={
            Array [
              Object {
                "alignItems": "center",
                "justifyContent": "center",
              },
            ]
          }
        >
          <Image
            source={1}
          />
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "backgroundColor": "transparent",
                "color": "white",
                "fontSize": 10,
                "marginTop": 4,
              }
            }
          >
            
          </Text>
        </TouchableOpacity>,
        "opacity": 0.4,
        "style": Object {
          "backgroundColor": "transparent",
          "borderRadius": 15,
          "height": 48,
          "justifyContent": "center",
          "width": 48,
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "activeOpacity": 1,
          "children": Array [
            <Image
              source={1}
            />,
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "backgroundColor": "transparent",
                  "color": "white",
                  "fontSize": 10,
                  "marginTop": 4,
                }
              }
            >
              
            </Text>,
          ],
          "disabled": true,
          "onPress": [MockFunction],
          "style": Array [
            Object {
              "alignItems": "center",
              "justifyContent": "center",
            },
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "source": 1,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "accessible": true,
              "allowFontScaling": true,
              "children": "",
              "ellipsizeMode": "tail",
              "style": Object {
                "backgroundColor": "transparent",
                "color": "white",
                "fontSize": 10,
                "marginTop": 4,
              },
            },
            "ref": null,
            "rendered": "",
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`NationActionButton component tests NationActionButton renders correctly 1`] = `
<View
  opacity={0.4}
  style={
    Object {
      "backgroundColor": "transparent",
      "borderRadius": 15,
      "height": 48,
      "justifyContent": "center",
      "width": 48,
    }
  }
>
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    collapsable={undefined}
    hasTVPreferredFocus={undefined}
    hitSlop={undefined}
    isTVSelectable={true}
    nativeID={undefined}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "justifyContent": "center",
        "opacity": 1,
      }
    }
    testID={undefined}
    tvParallaxProperties={undefined}
  >
    <Image
      source={1}
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "backgroundColor": "transparent",
          "color": "white",
          "fontSize": 10,
          "marginTop": 4,
        }
      }
    >
      Chat
    </Text>
  </View>
</View>
`;
